--- a/notes/results_ch2.Rmd
+++ b/notes/results_ch2.Rmd
@@ -46,22 +46,36 @@ chinook_full_sibs_pedigree %>%
   ungroup() %>% select(num.kids) %>% table
 ```
 ```{r}
+chinook_full_sibs_pedigree %>%
+  group_by(Pa, Ma) %>%
+  summarise(n=n()) %>%
+  ungroup() %>%
+  summarise(mean.size = mean(n))
+```
+
+```{r}
+## simulate the two generation full sib data and run pedigraph with it
 
 simFulldata <- function(seed.num = 234,
-                        pedigraph.version = 0.15,
+                        pedigraph.version = 0.181,
                         pedigraph.path = "/Users/thomasn/repo/pedigree-factor-graphs/src",
                         outdir.path="/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib", n.iter = 10,
                         replicate.indx  = 1,
+                        sf.rate = 1,
                         ped.df = chinook_full_sibs_pedigree,
-                        n.snp =95, geno.err = 0.02, skip.gen.ls = 0, missing.unk = 0.005,
+                        n.snp =95, geno.err = 0.02, missing.unk = 0.005,
                         pedfac.opt = "") {
+  
+  run.summary <- list()
+  
+  run.summary$param <- tibble::lst(seed.num, pedigraph.version, pedigraph.path, outdir.path, replicate.indx, sf.rate, n.snp, geno.err, missing.unk, pedfac.opt)
   
   ## factorize ped.df
   mating.factor <- factor(unlist(ped.df))
   mating.lvl <- levels(mating.factor)
   mating.factor.tbl <- matrix(as.numeric(mating.factor), ncol=3) %>% as.tibble()
   
-  outfolder.path <- paste0(outdir.path,"/",replicate.indx)
+  outfolder.path <- paste0(outdir.path,"/sf_",sf.rate,"/",replicate.indx)
   
   dir.create(file.path(outfolder.path), recursive = TRUE)
   set.seed(seed.num)
@@ -70,9 +84,9 @@ simFulldata <- function(seed.num = 234,
               sep = " ",eol = " ",quote = FALSE, col.names = FALSE, row.names = FALSE)
   
   colnames(mating.factor.tbl) <- c("kid","pa","ma")
-  simGeno(mating.tbl = mating.factor.tbl, out.path = outfolder.path,
-          n.snp =n.snp, geno.err = geno.err, random.seed = seed.num, skip.gen.ls = skip.gen.ls, 
-          missing.unk = missing.unk) 
+  geno.input.tbl <- simGeno(mating.tbl = mating.factor.tbl, out.path = outfolder.path,
+          n.snp =n.snp, geno.err = geno.err, random.seed = seed.num,sampling.frac.rate = sf.rate,sample.frac.gen = 1, missing.unk = missing.unk) 
+  ## assume indiv ID is preserves
   
   
   pedfac.call <- paste0(pedigraph.path,"/pedigraph_",pedigraph.version, " -d ", outfolder.path,
@@ -83,15 +97,73 @@ simFulldata <- function(seed.num = 234,
   system(pedfac.call,ignore.stderr = F, ignore.stdout = F)
   runtime <- toc()
   
-  out.ped.tbl <- read.table(paste0(outfolder.path, "/out/ped.txt",collapse = ""), stringsAsFactors = FALSE) %>%
+  run.summary$pedfac.cmd <- pedfac.call
+  
+  out.ped.raw.tbl <- read.table(paste0(outfolder.path, "/out/ped.txt",collapse = ""), stringsAsFactors = FALSE) %>%
     dplyr::tbl_df() %>%
-    dplyr::rename("iter"="V1", "kid"="V2", "pa"="V3", "ma"="V4") %>%
+    dplyr::rename("iter"="V1", "kid"="V2", "pa"="V3", "ma"="V4") 
+  
+  id.ls <-readRDS(paste0(outfolder.path, "/id.rds",collapse = ""))$id
+  max.id <- max(id.ls)
+  
+  out.ll.tbl <- read.table(paste0(outfolder.path, "/out/ll.txt",collapse = ""), stringsAsFactors = FALSE) %>%
+    dplyr::tbl_df() %>%
+    dplyr::rename("iter"="V1", "kid"="V2", "ll"="V3")
+  
+  max.ll.indx <- which.max(out.ll.tbl$ll)
+  max.ll.sampled.iter <- out.ll.tbl$iter[max.ll.indx]
+  max.ll.sampled.id <- out.ll.tbl$kid[max.ll.indx]
+  
+  max.ll.ped.indx <-  intersect(which(out.ped.raw.tbl$iter == max.ll.sampled.iter),
+                             which(out.ped.raw.tbl$kid == max.ll.sampled.id))
+  
+  if (max.ll.sampled.iter == 0) {
+    maxLL.ped <- out.ped.raw.tbl %>% filter(iter == max.ll.sampled.iter) %>%
+      mutate(pa = ifelse(row_number()>max.ll.ped.indx, -1, pa ),
+             ma = ifelse(row_number()>max.ll.ped.indx, -1, ma )) %>%
+      ungroup() %>%
+      select(-iter)
+  } else {
+    maxLL.ped <- out.ped.raw.tbl[1:max.ll.ped.indx,] %>%
+      filter(iter >= max.ll.sampled.iter-1) %>%
+      arrange(desc(iter)) %>%
+      group_by(kid) %>%
+      summarise(pa = pa[1],
+                ma = ma[1])
+  }
+  
+  
+  maxLL.ped.tbl <- maxLL.ped %>% ungroup() %>%
+    mutate(kid.id =  subbingID(kid, max.id, id.ls), 
+           pa.id = subbingID(pa, max.id, id.ls),
+           ma.id = subbingID(ma, max.id, id.ls))
+  
+  out.ped.tbl <- out.ped.raw.tbl %>%
     dplyr::group_by(iter, kid) %>%
     dplyr::summarise(pa = pa[dplyr::n()],
                      ma = ma[dplyr::n()])
   
-  id.ls <-readRDS(paste0(outfolder.path, "/id.rds",collapse = ""))$id
-  max.id <- length(id.ls)
+  
+  if (sf.rate != 0) {
+    message("working out parentage inference:")
+    parentage.grp.infer <- retrieveParent(out.ped.tbl, max.id, id.ls)
+    
+    observed.id.ls <- geno.input.tbl$sorted.id
+    parentage.grp.truth <- mating.factor.tbl %>% ungroup() %>%
+      summarise(kid.id = ifelse(kid %in% observed.id.ls, kid, -1),
+             pa.T = ifelse(pa %in% observed.id.ls, pa, -1),
+             ma.T = ifelse(ma %in% observed.id.ls, ma, -1))
+    
+    run.summary$parent.prob.tbl <- left_join(parentage.grp.infer, parentage.grp.truth, by=c("kid.id")) %>%
+      ungroup() %>%
+      mutate(n.match = (pa.id == pa.T)+(ma.id == ma.T))
+    
+    run.summary$parent.maxll.tbl <- left_join(maxLL.ped.tbl %>% ungroup() %>% filter(kid.id != -1) %>% select(kid.id, pa.id, ma.id), parentage.grp.truth, by=c("kid.id")) %>%
+      ungroup() %>%
+      mutate(n.match = (pa.id == pa.T)+(ma.id == ma.T))
+    
+    
+  }
   
   message("writing fullsib_assignment.txt ")
   full.sib.grp.infer <- RetrieveFullSib(out.ped.tbl, max.id, id.ls)
@@ -99,14 +171,19 @@ simFulldata <- function(seed.num = 234,
               paste0(outfolder.path,"/fullsib_assignment.txt"),
               sep = " ",eol = "\n",quote = FALSE, col.names = FALSE, row.names = FALSE)
   
+  full.sib.pair.maxll.tbl <- RetrieveFullSibTruth(maxLL.ped.tbl %>% ungroup() %>% filter(kid.id != -1) %>% select(kid, pa, ma)) %>% rename(presence.maxll = "presence.T")
+  
   ## perform pairwise sib-pair from the truth ped
   full.sib.pair.truth.tbl <- RetrieveFullSibTruth(mating.factor.tbl)
   ## run cluster analysis
   
-  run.summary <- list()
+  
   run.summary$runtime <- runtime$toc - runtime$tic
   run.summary$pairwise.tbl <- full_join(full.sib.grp.infer, full.sib.pair.truth.tbl, by= c("kid.1", "kid.2"))
-  run.summary$cluster.ls <- RetrieveFullSibGrp(out.ped.tbl, mating.factor.tbl, max.id, id.ls)
+  run.summary$fullsib.pairwise.maxll <- full_join(full.sib.pair.maxll.tbl, full.sib.pair.truth.tbl, by= c("kid.1", "kid.2"))
+  run.summary$greedy.fullsib.cluster.ls <- RetrieveFullSibGrp(out.ped.tbl, mating.factor.tbl, max.id, id.ls)
+  run.summary$maxLL.fullsib.cluster.ls <- RetrieveFullSibGrp(maxLL.ped.tbl, mating.factor.tbl, max.id, id.ls,is.single.ped.entry = T)
+  
   return(run.summary)
 }
 ```
@@ -115,9 +192,13 @@ simFulldata <- function(seed.num = 234,
 RunSequoia <- function(seed.num = 234,
                         outdir.path="/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib", 
                         replicate.indx  = 1,
+                        sf.rate = 1,
                         ped.df = chinook_full_sibs_pedigree,
-                        n.snp =95, geno.err = 0.02, skip.gen.ls = 0, missing.unk = 0.005,
-                        pedfac.opt = "") {
+                        n.snp =95, geno.err = 0.02, missing.unk = 0.005) {
+  
+  run.summary <- list()
+  
+  run.summary$param <- tibble::lst(seed.num, outdir.path, replicate.indx, sf.rate, n.snp, geno.err, missing.unk)
   
   ## require that pedFac has already run Sim
   ## factorize ped.df
@@ -126,7 +207,7 @@ RunSequoia <- function(seed.num = 234,
   mating.factor.tbl <- matrix(as.numeric(mating.factor), ncol=3) %>% as.tibble()
   colnames(mating.factor.tbl) <- c("kid","pa","ma")
   
-  outfolder.path <- paste0(outdir.path,"/",replicate.indx)
+  outfolder.path <- paste0(outdir.path,"/sf_",sf.rate,"/",replicate.indx)
   pedFac.geno.tbl <- read.table(paste0(outfolder.path,"/","geno.txt"), stringsAsFactors = F) %>%
     as_tibble()
   
@@ -144,7 +225,6 @@ RunSequoia <- function(seed.num = 234,
   geno.matrix[geno.matrix == 3] <- -9
   rownames(geno.matrix) <- lifeHistory.tbl$ID
   
-
   set.seed(seed.num)
   
   tic("run sequoia:")
@@ -155,17 +235,21 @@ RunSequoia <- function(seed.num = 234,
   error.rate.2 <- err.rate /2
   error.rate.3 <- 1-err.rate
 
-  ErrM <<- matrix(c(error.rate.0,err.rate,error.rate.1,
-          error.rate.2, 1-err.rate, error.rate.2,
-          error.rate.1,err.rate,error.rate.0), ncol = 3)
+  #ErrM <<- matrix(c(error.rate.0,err.rate,error.rate.1,
+   #       error.rate.2, 1-err.rate, error.rate.2,
+    #      error.rate.1,err.rate,error.rate.0), ncol = 3)
   
-        
-  ParOUT <- sequoia(GenoM = as.matrix(geno.matrix), LifeHistData = lifeHistory.tbl, MaxSibIter = 0)
+  ErrM <<- matrix(c(error.rate.3,error.rate.2,error.rate.2,
+                    error.rate.2, error.rate.3,error.rate.2,
+                    error.rate.2,error.rate.2,error.rate.3), ncol = 3)
+  
+  if (sf.rate != 0) {      
+  ParOUT_Mono <- sequoia(GenoM = as.matrix(geno.matrix), LifeHistData = lifeHistory.tbl, MaxSibIter = 0,Complex = "mono")}
 
-
+  ParOUT_Simp <- sequoia(GenoM = as.matrix(geno.matrix), LifeHistData = lifeHistory.tbl, MaxSibIter = 0,Complex = "simp") 
   SeqOUT <- sequoia(GenoM = geno.matrix,
-                   SeqList = ParOUT,
-                   MaxSibIter = 10, Err = geno.err)
+                   SeqList = ParOUT_Simp,
+                   MaxSibIter = 20, Err = geno.err, Complex = "simp")
   
   runtime <- toc()
   
@@ -174,12 +258,36 @@ RunSequoia <- function(seed.num = 234,
   id.ls <-readRDS(paste0(outfolder.path, "/id.rds",collapse = ""))$id
   max.id <- max(id.ls)
   
+  
+  if (sf.rate != 0) {
+    
+    message("preparing parentage assignment tbl ....")
+    
+    geno.sim.tbl <-  read.table(paste0(outfolder.path, "/ingeno.txt",collapse = ""), stringsAsFactors = FALSE)
+     
+    observed.id.ls <- geno.sim.tbl$V1
+    
+    parentage.grp.truth <- mating.factor.tbl %>% ungroup() %>%
+      summarise(kid.id = ifelse(kid %in% observed.id.ls, kid, -1),
+             pa.T = ifelse(pa %in% observed.id.ls, pa, -1),
+             ma.T = ifelse(ma %in% observed.id.ls, ma, -1),
+             id = kid.id) %>%
+      filter(kid.id != -1)
+    
+  
+    run.summary$parent.tbl <- left_join(parentage.grp.truth, ParOUT_Mono$PedigreePar %>% as_tibble() %>% select(id, sire, dam, LLRpair) %>% ungroup() %>% mutate(id =as.numeric(id)) , by="id") %>%
+      ungroup() %>%
+      rename(pa.id = "sire", ma.id = "dam") %>%
+      mutate(pa.id = ifelse(is.na(pa.id), -1, as.numeric(pa.id)),
+             ma.id = ifelse(is.na(ma.id), -1, as.numeric(ma.id)),
+             n.match = (pa.id == pa.T)+(ma.id == ma.T))
+  }
+  
   sequoia.ped.1 <- inner_join(SeqOUT$Pedigree, data.frame(id=rownames(geno.matrix))) %>% as_tibble() %>%
     select(id, sire, dam, LLRpair) %>% ## using LLRpair as the metric of ordering
     ungroup() %>%
     mutate(sire = ifelse(is.na(sire), row_number(), sire),
-           dam = ifelse(is.na(dam), row_number(), dam),
-           LLRpair = ifelse(is.na(LLRpair), 0, LLRpair))
+           dam = ifelse(is.na(dam), row_number(), dam))
   
    sequoia.ped.2 <- 
      sequoia.ped.1 %>%
@@ -222,7 +330,6 @@ RunSequoia <- function(seed.num = 234,
   full.sib.pair.truth.tbl <- RetrieveFullSibTruth(mating.factor.tbl)
   ## run cluster analysis
   
-  run.summary <- list()
   run.summary$runtime <- runtime$toc - runtime$tic
   run.summary$pairwise.tbl <- full_join(full.sib.grp.infer, full.sib.pair.truth.tbl, by= c("kid.1", "kid.2"))
   run.summary$cluster.ls <- RetrieveFullSibGrpSeq(sequoia.ped.2, mating.factor.tbl, max.id, id.ls)
@@ -232,43 +339,252 @@ RunSequoia <- function(seed.num = 234,
 
 ```
 
-```{r, cache=T}
-fullsib.run1 <- simFulldata(replicate.indx = 1, pedigraph.version = 0.18, pedfac.opt= " -j 1", n.iter = 100, seed.num = 234)
-fullsib.run2 <- simFulldata(replicate.indx = 2, pedigraph.version = 0.18, pedfac.opt= " -j 1", n.iter = 100, seed.num = 334)
-fullsib.run3 <- simFulldata(replicate.indx = 3, pedigraph.version = 0.18, pedfac.opt= " -j 1", n.iter = 100, seed.num = 434)
-fullsib.run4 <- simFulldata(replicate.indx = 4, pedigraph.version = 0.18, pedfac.opt= " -j 1", n.iter = 100, seed.num = 534)
-fullsib.run5 <- simFulldata(replicate.indx = 5, pedigraph.version = 0.18, pedfac.opt= " -j 1", n.iter = 100, seed.num = 634)
 
-#save(fullsib.run1,fullsib.run2, fullsib.run3, fullsib.run4, fullsib.run5, file = "/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsibrun1_5.RData")
+
+```{r}
+RunColony <- function(seed.num = 234,
+                        outdir.path="/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib", 
+                        replicate.indx  = 1,
+                        sf.rate = 1, ped.df = chinook_full_sibs_pedigree,
+                      run.name = "colonialTrial",
+                      perl.script.path = "/Users/thomasn/repo/pedigree-factor-graphs/src/SimToColony_2065.pl",
+                      colony.path = "/Users/thomasn/Downloads/colony2.mac_.20180730_1/colony2s.out") {
+  
+  run.summary <- list()
+  
+  run.summary$param <- tibble::lst(seed.num, outdir.path, replicate.indx, run.name, sf.rate, perl.script.path)
+  
+  ## require that pedFac has already run Sim
+  ## factorize ped.df
+  mating.factor <- factor(unlist(ped.df))
+  mating.lvl <- levels(mating.factor)
+  mating.factor.tbl <- matrix(as.numeric(mating.factor), ncol=3) %>% as.tibble()
+  colnames(mating.factor.tbl) <- c("kid","pa","ma")
+  
+  outfolder.path <- paste0(outdir.path,"/sf_",sf.rate,"/",replicate.indx)
+  geno.txt.path <- paste0(outfolder.path,"/","geno.txt")
+  pedFac.geno.tbl <- read.table(geno.txt.path, stringsAsFactors = F) %>%
+    as_tibble()
+  
+  set.seed(seed.num)
+  
+  colony.prep.cmd <- paste0("perl ", perl.script.path, " -f ", outfolder.path, " -g 0 -n ",run.name, collapse = "")
+  system(colony.prep.cmd,ignore.stderr = F, ignore.stdout = F)
+  
+  dir.create(paste0(outfolder.path,"/colony"), recursive = TRUE)
+  file.copy(paste0(outfolder.path,"/colony_0.in"),
+            paste0(outfolder.path,"/colony/colony_0.in"), overwrite = T)
+            
+  colony.run.cmd <- paste0('faketime "2008-01-01 00:00:00" ', colony.path,  " IFN:",outfolder.path,"/colony_0.in >  ",outfolder.path,"/colony/colony_run.out")
+  
+  tic("run colony:")
+  system(colony.run.cmd, ignore.stderr = F, ignore.stdout = F)
+  runtime <- toc()
+  
+  run.summary$colony.cmd <- colony.run.cmd 
+  
+  colony.run.files <- list.files(".", pattern = paste0(run.name))
+  file.copy(colony.run.files, paste0(outfolder.path, "/colony/."), recursive = T, copy.date=T, overwrite = T) 
+
+  id.ls <-readRDS(paste0(outfolder.path, "/id.rds",collapse = ""))$id
+  max.id <- max(id.ls)
+  
+  
+  colony.cluster.tbl <-  read.table(paste0(outfolder.path, "/colony/",run.name,".BestFSFamily",collapse = ""), stringsAsFactors = FALSE, skip = 1) %>% as_tibble()
+  colnames(colony.cluster.tbl) <- c("cluster", "prob.incl", "prob.excl", "fullsib")
+     
+
+    
+  if (sf.rate != 0) {
+    message("preparing parentage assignment tbl ....")
+    
+    colony.infer.tbl <-  read.csv(paste0(outfolder.path, "/colony/",run.name,".ParentPair",collapse = ""), stringsAsFactors = FALSE) %>% as_tibble()
+    colnames(colony.infer.tbl) <- c("kid", "pa", "ma", "prob")
+  colony.infer.tbl <- colony.infer.tbl %>% mutate(
+    pa = ifelse(pa=="*",max.id+1, pa),
+    ma = ifelse(ma=="#",max.id+1, ma)
+  )
+  
+ colony.id.infer.tbl <- colony.infer.tbl %>% ungroup() %>%
+      mutate(id = subbingID(as.numeric(kid), max.id, id.ls),
+             pa.id = subbingID(as.numeric(pa), max.id, id.ls),
+             ma.id = subbingID(as.numeric(ma), max.id, id.ls))
+    
+  
+    
+    geno.sim.tbl <-  read.table(paste0(outfolder.path, "/ingeno.txt",collapse = ""), stringsAsFactors = FALSE)
+    
+    observed.id.ls <- geno.sim.tbl$V1
+    
+    parentage.grp.truth <- mating.factor.tbl %>% ungroup() %>%
+      summarise(kid.id = ifelse(kid %in% observed.id.ls, kid, -1),
+             pa.T = ifelse(pa %in% observed.id.ls, pa, -1),
+             ma.T = ifelse(ma %in% observed.id.ls, ma, -1),
+             id = kid.id) %>%
+      filter(kid.id != -1)
+    
+    run.summary$parent.tbl <- left_join(parentage.grp.truth, colony.id.infer.tbl %>% select(id, pa.id, ma.id, prob) %>% ungroup() %>% mutate(id =as.numeric(id)) , by="id") %>%
+      ungroup() %>%
+      mutate(pa.id = ifelse(is.na(pa.id), -1, as.numeric(pa.id)),
+             ma.id = ifelse(is.na(ma.id), -1, as.numeric(ma.id)),
+             n.match = (pa.id == pa.T)+(ma.id == ma.T))
+  }
+  
+sib.pairs.ls <- colony.cluster.tbl %>%
+    separate_rows(fullsib) %>%
+  group_by(cluster) %>%
+  filter(n() > 1) %>%
+  split(.$cluster) %>%
+  map(., 4) %>%
+  map(~combn(.x, m = 2)) %>%
+  map(~t(.x)) %>%
+  map_dfr(as_tibble) %>%
+    dplyr::mutate(kid.1 = ifelse(V1<V2, V1,V2),
+           kid.2 = ifelse(V1<V2, V2,V1)) %>%
+    select(kid.1, kid.2)
+  
+  full.sib.pair.infer <- left_join(sib.pairs.ls, colony.cluster.tbl %>% separate_rows(fullsib) %>% rename(kid.1 = "fullsib"), by= "kid.1")
+
+  
+  write.table(full.sib.pair.infer,
+              paste0(outfolder.path,"/fullsib_colony_assignment.txt"),
+              sep = " ",eol = "\n",quote = FALSE, col.names = FALSE, row.names = FALSE)
+  
+  ## perform pairwise sib-pair from the truth ped
+  full.sib.pair.truth.tbl <- RetrieveFullSibTruth(mating.factor.tbl)
+  ## run cluster analysis
+  
+  run.summary$runtime <- runtime$toc - runtime$tic
+  run.summary$pairwise.tbl <- full_join(full.sib.pair.infer, full.sib.pair.truth.tbl, by= c("kid.1", "kid.2"))
+  run.summary$cluster.ls <- RetrieveFullSibGrpCOLONY(colony.cluster.tbl, mating.factor.tbl, max.id, id.ls)
+  return(run.summary)
+  
+}
+
+
+```
+this block is going to 
+```{r, cache=T, eval=FALSE}
+sf.array <- c(1, 0.75, 0.5, 0.25, 0)
+seed.num <- c(234, 334, 434, 534, 634)
+
+fullsib.pedfac <- lapply(1:5, function(sf) {
+   lapply(1:5, function (rep) {
+    simFulldata(replicate.indx = rep, pedigraph.version = 0.181, pedfac.opt= " -j 1 -f 10", n.iter = 100, seed.num = seed.num[rep], sf.rate = sf.array[sf])
+  })
+})
+
+save(fullsib.pedfac, file = "/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib/pedfac_full.Rda")
 
 ##compare this with Sequoia, COLONY and Franz
-sequoia.run1 <- RunSequoia(replicate.indx = 1, seed.num = 234)
+
+fullsib.sequoia <- lapply(1:5, function(sf) {
+   lapply(1:5, function (rep) {
+    RunSequoia(replicate.indx = rep, seed.num = seed.num[rep], sf.rate = sf.array[sf])
+  })
+})
+
+save(fullsib.sequoia, file = "/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib/sequoia_full.Rda")
+
+fullsib.COLONY <- lapply(1:5, function(sf) {
+   lapply(1:5, function (rep) {
+    RunColony(replicate.indx = rep, seed.num = seed.num[rep], sf.rate = sf.array[sf], run.name=paste0("sf",sf.array[sf],"r",rep))
+  })
+})
+
+save(fullsib.COLONY, file = "/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib/COLONY_full.Rda")
 
 ```
 
+```{r}
+
+sf.array <- c(1, 0.75, 0.5, 0.25, 0)
+###parentage assignment plot ROC (from 1 to 0.25),
+
+map(.x = c(1:4), .f = function(x) {
+fullsib.pedfac[[x]][[1]]$parent.prob.tbl
+fullsib.COLONY[[x]][[1]]$parent.tbl
+fullsib.sequoia[[x]][[1]]$parent.tbl
+})
+
+
+## creating plots with sf = 1, 0.5, 0 (top - bottom) - of 1 replicate
+## sibling cluster plot AUC (column: software)
+
+sf.array <- c(1, 0.75, 0.5, 0.25, 0)
+
+takePairWise <- function(allruns.df, run.label = "") {
+map(.x = c(1,3,5), .f = function(x) allruns.df[[x]][[1]]$pairwise.tbl %>%
+    ungroup() %>%
+    mutate(
+      prob = ifelse(is.na(prob), 0, prob),
+      is.true = ifelse(is.na(presence.T), 0, 1),
+      sf = sf.array[x],
+      name = run.label)) %>% bind_rows()
+}
+
+pairwise.pack <- bind_rows(
+takePairWise(fullsib.pedfac, run.label = "pedFac"),
+takePairWise(fullsib.sequoia, run.label = "sequoia"),
+takePairWise(fullsib.COLONY, run.label = "COLONY"))
+
+
+
+## plot cluster arrangement
+
+
+
+
+```
+
+
+
+
 ```{r, eval =FALSE}
 
-
-print("Calculating error distance ...")
   out.ls$errorDistance <- partitionComparison::classificationErrorDistance(new("Partition",
                                                        indiv.cluster.ls$cluster.infer),
                                                    new("Partition",
                                                        indiv.cluster.ls$cluster.truth))
 
-  
-  
+```
+
+
+```{r, eval =FALSE}
 full.sib.roc.input <- lapply(1:5, function(i) {
   roc.input.tbl <- eval(as.name(paste0("fullsib.run",i, collapse="", sep="")))$pairwise.tbl %>%
     ungroup() %>%
     #filter(!is.na(prob)) %>%
     mutate(
-      prob = ifelse(is.na(prob), 0, prob)
+      prob = ifelse(is.na(prob), 0, prob),
       is.true = ifelse(is.na(presence.T), 0, 1),
            rep = i) %>%
     rename("posterior" = prob) }) %>% bind_rows()
   
 Plot.ROC.sibPair.plot(full.sib.roc.input)
+```  
+
+```{r, eval =FALSE}
+full.sib.seq.roc.input <- lapply(1:5, function(i) {
+  roc.input.tbl <- eval(as.name(paste0("sequoia.run",i, collapse="", sep="")))$pairwise.tbl %>%
+    ungroup() %>%
+    #filter(!is.na(prob)) %>%
+    mutate(
+      prob = ifelse(is.na(prob), 0, prob),
+      is.true = ifelse(is.na(presence.T), 0, 1),
+           rep = i) %>%
+    rename("posterior" = prob) }) %>% bind_rows()
   
+# normalized LLR - 0 to 1 scale
+Plot.ROC.sibPair.plot(full.sib.seq.roc.input %>%
+                        ungroup() %>%
+                        mutate(posterior = 1-(10^as.numeric(posterior))/max(10^as.numeric(posterior))))
+```  
+
+```{r}
+```
+
+```{r}
 #run1 <- simFulldata(replicate.indx = 2, n.snp = 300)
 
 ll.path <- "/Users/thomasn/repo/pedigree-factor-graphs/data/ch2/fullsib/2/out/ll.txt"
